# research_software_similarity_analysis

./: .gitignore  README.md  pyproject.toml  train_model_logs.txt
notebooks/: 00_analyze_method_similarity.ipynb  01_filter_paper.ipynb  02_merge_data.ipynb  03_similarity_analysis.ipynb  04_somef_describe.ipynb  04_train_model.ipynb  04_train_model_multi_label.ipynb  04_train_model_single_label.ipynb  Untitled.ipynb  visuals.ipynb
src/: create_final_data.py  enrich_data.py  filter_merged_data_with_readme.py  format_json.py  generate_somef.py  merge_data_download_github_script.py  preprocessing.py  similarity_analysis.py  train_model.py
src/utils/: vectorizers.py
