[tool.poetry]
name = "research-software-similarity-analysis"
version = "0.1.0"
description = ""
authors = ["Jenifer Tabita Ciuciu-Kiss <jenifer.tabita.ciuciu.kiss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
bs4 = "^0.0.2"
requests = "^2.32.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
transformers = "^4.45.1"
sentence-transformers = "^3.1.1"
levenshtein = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
