[tool.poetry]
name = "research-software-similarity-analysis"
version = "0.1.0"
description = ""
authors = ["Jenifer Tabita Ciuciu-Kiss <jenifer.tabita.ciuciu.kiss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.45.1"
sentence-transformers = "^3.1.1"
levenshtein = "^0.26.0"
contractions = "^0.1.73"
imblearn = "^0.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
